tests/specs/check/package_json_fail_check/fail_check.out
error: TS2322 [ERROR]: Type 'number' is not assignable to type 'string'.
const _test: string = getValue();
      ~~~~~
    at file:///[WILDCARD]/fail_check.ts:3:7
