tests/specs/check/package_json_fail_check/fail_check.ts
import { getValue } from "./lib.ts";

const _test: string = getValue();
